# krubik

./: .editorconfig  .env.example  .env.sample  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: dependencies.py  localization.py  main.py
backend/app/services/: __init__.py  cube_validator.py  solver.py  solver_client.py  solver_local.py  types.py
backend/krubik.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_solver.py
frontend/: Dockerfile  index.html  jest.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: CubeForm.tsx  CubeInputWizard.tsx  CubeVisualizer.tsx  LanguageSelector.tsx  SolutionPanel.tsx  SolutionSteps.tsx  Toast.tsx
frontend/src/hooks/: useSolveCube.ts
frontend/src/i18n/: config.ts  resources.ts
frontend/src/store/: useCubeStore.ts
frontend/src/utils/: cookies.ts  facelets.ts
frontend/tests/: App.test.tsx  CubeForm.test.tsx  CubeInputWizard.test.tsx  SolutionSteps.test.tsx  playwright.config.ts
frontend/tests/e2e/: app.spec.ts
infrastructure/nginx/: default.conf
