[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krubik"
version = "0.1.0"
description = "Rubik's cube solver service"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Krubik Team"}]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<0.30",
    "pydantic>=2.6,<3",
    "kociemba>=1.2,<2",
    "python-dotenv>=1.0,<2"
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "black>=24.0,<25",
    "ruff>=0.4,<0.5",
    "mypy>=1.9,<2",
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "TID", "ERA", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
pythonpath = ["backend"]
