[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krubik"
version = "0.2.0"
description = "Full-stack Rubik's Cube solver platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Krubik Team" }]
dependencies = [
    "fastapi>=0.111.0,<1",
    "uvicorn[standard]>=0.29.0,<0.31",
    "httpx>=0.27.0,<0.28",
    "python-dotenv>=1.0.1,<2",
    "kociemba>=1.2.1,<2",
    "structlog>=24.1.0,<25",
    "pydantic-settings>=2.2.1,<3",
    "slowapi>=0.1.9,<0.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0,<25",
    "ruff>=0.4.5,<0.5",
    "mypy>=1.10.0,<2",
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.23.6,<0.24",
    "respx>=0.21.1,<0.22",
    "pytest-cov>=5.0.0,<6",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
